2001-03-03 John Fleck <jfleck@inkstain.net>

	adding COPYING-DOCS

2001-03-03 John Fleck <jfleck@inkstain.net>

	* omf-install/Makefile.am - change the destination directory for the 
	omf files

2001-03-01 John Fleck <jfleck@inkstian.net>

	* htmldocs.make (template for making html docs directories)
	help/es/ghex-es.omf
	help/ja/ghex-ja.omf
	help/sv/ghex-sv.omf
	update appropriate makefiles, finishing ScrollKeeper support

2001-02-28 John Fleck <jfleck@inkstain.net>

	* add omf-install/Makefile.am
	app-docs.make
	help/C/ghex-C.omf

	app-docs.make is a standard template for docs makefiles, which is
	called from within help/C/Makefile.am. It includes
	ScrollKeeper/omf support

	help/C/ghex-C.omf is the omf file, which holds metadata about
	C/ghex.sgml needed by ScrollKeeper to build a library of docs

	omf-install is a directory used by ScrollKeeper/omf in the build
	process.

	Also, updated help/C/Makefile.am, Makefile.am and configure.in to
	handle all the new stuff.

2001-02-23  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c (export_html_selected_file, save_selected_file): destroy
	and NULLify file_sel. fixes bug #51269.
	made most dialogs modal.

2001-02-20  Jaka Mocnik  <jaka@gnu.org>

	* src/gtkhex.c (gtk_hex_size_request): take offset column into
	account in order to make place for 16 bytes in a row.

2001-02-19  Jaka Mocnik  <jaka@gnu.org>

	* src/ui.c: changed my email and added 2001 to about dialog.

2001-02-15  Jaka Mocnik  <jaka@gnu.org>

	* po/sl.po: added missing slovene translations.
	* po/fr.po: fixed french translations as suggested by
	lorna.whelan@ireland.sun.com (fixes bugs #50910 and #50908).

2001-02-04 John Fleck <jfleck@inkstain.net>

	* converted English help docs to sgml, added screenshots
	(help/C/), updated Makefile.am to handle new kit

2001-01-26  Fatih Demir	<kabalak@gmx.net>

	* configure.in: Added tr to ALL_LINGUAS.

2000-12-13  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

	* configure.in (ALL_LINGUAS): added sk
