@@ -1,7 +1,7 @@
 AC_INIT(ghex.desktop)
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(ghex, 1.2-beta1)
+AM_INIT_AUTOMAKE(ghex, 1.2-beta3)
 
 AM_MAINTAINER_MODE
 
